style1.css
body, html {
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
    background-color: #f0f0f0;
    color: #333;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    width: 100%; /* Ensure the body takes the full width */
}

/* Make sure header spans full width */
header {
    background-color: #222;
    color: white;
    text-align: center;
    padding: 2rem 0;
    width: 100%; /* Ensure header takes full width */
}

/* Ensure other elements respect the full width */

h1 {
    margin: 0;
    font-size: 2.5rem;
    font-weight: 300;
    letter-spacing: 2px;
}
nav {
    background-color: #333;
    padding: 1rem 0;
}
nav ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    display: flex;
    justify-content: center;
}
nav ul li {
    margin: 0 1rem;
}
nav ul li a {
    color: white;
    text-decoration: none;
    font-size: 1.1rem;
    transition: color 0.3s ease;
}
nav ul li a:hover {
    color: #C59AEA;
}
nav .active_page {
    color: #7785AC;
}
main {
    width: 75%;
    max-width: 900px;
    margin: 2rem auto;
    padding: 1rem;
    background-color: white;
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
    flex-grow: 1;
    margin-bottom: 60px; /* Add space for the footer */
}
footer {
    background-color: #222;
    color: white;
    text-align: center;
    font-size: 0.5rem;
    padding: 0.5rem 0;
    position: fixed;
    bottom: 0;
    width: 100%;
}

@media (max-width:900px) {
    main {
        width: 75%;
    }
}
@media (max-width:600px) {
    main {
        width: 75%;
    }
}
@media (max-width: 480px) {
    main {
        width: 75%;
    }
}



/*ABOUT PAGE CSS*/
.about-content {
    margin: 0 1rem;
    padding: 1rem;
    display: grid;
    grid-template-columns: 1fr 2fr;
    gap: 2rem;
    align-items: start;
}
.profile-image {
    width: auto;
    max-height: 350px;
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
}
.bio {
    line-height: 1.6;
}
/*.bio h2 {
    color: #222;
    margin-bottom: 1rem;
}
.skills {
    margin-top: 2rem;
}
.skills h3 {
    color: #444;
    margin-bottom: 1rem;
}
.skill-tags {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5rem;
}
.skill-tag {
    background-color: #eee;
    padding: 0.5rem 1rem;
    border-radius: 20px;
    font-size: 0.9rem;
}
.education {
    margin-top: 2rem;
}
.education h3 {
    color: #444;
    margin-bottom: 1rem;
}
.education-item {
    margin-bottom: 1rem;
}
.year {
    color: #666;
    font-size: 0.9rem;
}*/

@media (min-width: 769px) {
    .profile {
        margin: 1rem;
        justify-self: start;
    }
    .profile-image {
        max-width: 300px;
        display: block;
    }
}
@media (max-width: 768px) {
    .about-content {
        grid-template-columns: 1fr;
    }
    .profile {
        margin: 1rem;
        padding: 1rem;
        justify-content: center;
    }
    .profile-image {
        height: auto;
        display: block;
        max-width: 300px;
        margin: 0 auto;
    }
}



/*CONTACT PAGE CSS*/
.contact-container {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 1rem;
    width: 70vw;
    margin: 0 auto;
}
.contact-container  h2{
    margin-top: 1rem;
    text-align: center;
}

.contact-form {
    background: #f8f8f8;
    padding: 1.5rem;
    border-radius: 10px;
}

.form-group {
    margin-bottom: 1rem;
}

.form-group label {
    display: block;
    margin-bottom: 0.3rem;
    color: #444;
}

.form-group input,
.form-group textarea {
    width: 100%;
    padding: 0.6rem;
    border: 1px solid #ddd;
    border-radius: 5px;
    font-size: 1rem;
}

.submit-btn {
    background-color: #222;
    color: white;
    padding: 0.8rem 1.5rem;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 1rem;
    transition: background-color 0.3s ease;
}

.submit-btn:hover {
    background-color: #444;
}

/* Social Links */
.social-links {
    text-align: center;
}

.social-icons {
    display: flex;
    justify-content: center;
    gap: 1.5rem;
    margin-top: 0.5rem;
}

.social-icon {
    color: #444;
    transition: color 0.3s ease;
}

.social-icon svg {
    width: 24px;
    height: 24px;
    fill: currentColor;
}

.social-icon:hover {
    color: #C59AEA;
}


@media (max-width: 768px) {
    .contact-container {
        padding: 0;
    }
            
    .contact-form {
        padding: 1rem;
    }
}



/*GALLERY ITEM CSS*/
.gallery {
    display: grid;
    grid-template-columns: repeat(24, 1fr);
    gap: 1rem;
}

#gallery {
    
}
.gallery-item {
    position: relative;
    overflow: hidden;
    border-radius: 8px;
    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
    transition: transform 0.3s ease;
    height: 250px; /* Fixed height for all gallery items*/ 
}
.gallery a {
    text-decoration: none;
}
.gallery-item:hover {
    transform: scale(1.05);
}
.gallery-item img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}
.gallery-item .overlay {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.7);
    overflow: hidden;
    width: 100%;
    height: 0;
    transition: .5s ease;
}
.gallery-item:hover .overlay {
    height: 100%;
}
.gallery-item .text {
    color: white;
    font-size: 20px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    width: 90%;
}

@media (max-width:900px) {
    .gallery {
        grid-template-columns: repeat(24, 1fr);
    }
}
@media (max-width:600px) {
    .gallery {
        grid-template-columns: repeat(12, 1fr);
    }
}
@media (max-width: 480px) {
    .gallery {
        grid-template-columns: repeat(12, 1fr);
    }
}


/*ESSAY ITEM CSS*/
#essay-block {
    padding: 0.5rem;
    display: inline-block;
}
.essay-container {
    max-width: 1200px;
    padding: 0 1rem;
    margin: 0px auto;
}

.essay-header {
    text-align: center;
}

.essay-header h2 {
    font-size: 2.2rem;
    color: #333;
    margin: 2px;
    margin-top: 20px;
}

.essay-header h3 {
    font-size: 1.8rem;
    color: #333;
    margin: 0px;
}

.essay-header p {
    font-size: 1.2rem;
    color: #666;
    max-width: 800px;
    margin: 10px 0px 0px;
    text-align: center;
    font-style: italic;
}
.essay-content {
    text-align: center;
    color: white;
    padding: 1rem;
}
.essay-content h3 {
    margin: 0;
    font-size: 1.5rem;
    margin-bottom: 0.5rem;
}
.essay-content p {
    margin: 1rem;
    font-size: 1rem;
}
.essay-image {
    display: block;
    margin: 1.7rem; /* Add spacing for text wrapping */
}

.photo-essay {
    margin: 0;
}

.photo-essay p {
    display: block;
    margin: 1rem;
}

.essay-image.gallery-item {
    display: flex;
    margin: 1rem;
}


/* Modal Styles */
.modal {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.9);
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 1000;
}

.modal-content {
    max-width: 90%;
    max-height: 90%;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.modal-content img {
    max-width: 100%;
    max-height: 70vh;
    object-fit: contain;
    margin-bottom: 1rem;
}

.modal-text {
    overflow-y: auto;
    max-height: 20vh;
    width: 100%;
    text-align: center;
}

.modal-text p {
    color: white;
    margin: 0;
}

.modal-caption {
    font-size: 1.2rem;
    font-weight: lighter;
    margin-bottom: 0.5rem;
}

.modal-details {
    color: #ccc;
    font-size: 0.75rem;
    font-style: italic;
}

